Version 7.4.0
- Fixed some errors in C __pasm parsing
- Fixed compile time calculations of QLOG and QEXP (thanks to Ada)
- Fixed many incorrect address calculations for Spin2 ^x variables
- Improved some nucode peephole optimizations

Version 7.3.0
- Allow `__attribute__((packed))` on C structs
- Add `-Wbuiltin-fallback` for warning when builtin functions must call libraries
- Make Spin2 structs actually packed
- Fix parsing of `[++]` and `[--]` as pre operators
- Fixed error reporting around __builtin_printf
- Fixed callpa #x, ##longx (keep 20 bits for addresses, not 18)
- Fixed error reporting for P2_DST_CONST_OK instructions
- Fixed passing of structs containing non-long-sized items
- Implemented `%interface` for Spin2
- Updated __builtin_printf to handle %X

Version 7.2.1
- Use _rxpin as repository to hold frequency for gbrk debug
- Fixed "short unsigned" declarations in C

Version 7.2.0
- Add _[n] syntax for skipping assignments in Spin2
- Added TASKHLT pseudo-variable
- Fixed usage of sub-objects in Spin2
- Fixed compilation of Spin1 files containing a `_` constant (thanks, Ada!)
- Fixed a long standing memory evaluation order bug

Version 7.1.2
- Fix namespace usage during initial address assignment (so labels in namespaces work in ORG/RES/FIT etc.)
- Fix some issues around array address calculations in Spin2
- Fix struct usage in DAT sections

Version 7.1.1
- Fixed using struct names for return values and parameters in Spin2
- Improved code generation for small structs containing arrays
- Improved some forward branches in P1 LMM mode

Version 7.1.0
- Added _rxpoll() to check for character without a timeout
- Reverted _rx* functions to no longer use 28 bit internal buffer; this is less resilient to P2 side timing changes, but better if PC timing is uncertain
- Added new Spin2 @\"string" for strings with embedded C-style escapes
- Added DITTO to duplicate code/data in Spin2 assembly
- Added some of the upcoming Spin2 v51 float functions